syntax = "proto3";
package admin_actions;

service UserManager {
	rpc CreateUser (CreateUserRequest) returns (CreateUserReply);
}

message CreateUserRequest {
	string firstName = 1;
	string lastName = 2;
	string pin = 3;
}

message CreateUserReply {
//rc=0 means success, rc=1 means not a success
	uint32 rc = 1;
}
